# GMTK2021

./: .gitignore  PyInstaller_Command.txt  README.md  pyInstaller.bat  pyproject.toml  script.py
levels/: level2_background_layer.csv  level2_entity_layer.csv  level_1_background_layer.csv  level_1_obstacle_layer.csv
levels/level1/: background.csv  collectable_layer.csv  entity_layer.csv  foreground.csv
levels/level2/: background.csv  collectable_layer.csv  foreground.csv  obstacle_layer.csv
levels/level3/: background.csv  foreground.csv
levels/level4/: background.csv  foreground.csv
levels/level5/: background.csv  foreground.csv
levels/level6/: background.csv  foreground.csv
levels/level7/: background.csv  foreground.csv
levels/level8/: background.csv  foreground.csv
piskel/: Monster_N1.piskel  monster.piskel  playerLmg.piskel  playerPistol.piskel  playerRifle.piskel  playerSniper.piskel  playerUnarmed.piskel  player_gun.piskel  player_pistol.piskel  player_rifle.piskel  player_unarmed.piskel  weapons.piskel  zombie.piskel
res/piskel/: monster1.piskel  player_unarmed.piskel
res/tiled/: CosmicLilac_Tiles_greyscale.tsx  Tilesheet.tsx  level1.tmx  level2.tmx  level3.tmx  test_tileset.tsx  testmap..csv  testmap.csv  testmap.tmx  testmap_background_layer.csv  (+3 more)
scripts/: background.py  game.py  gameworld.py  levelController.py  main.py  menu.py  musicController.py  player.py  spriteUtils.py  story.py  weaponController.py
tiled/: Tilesheet.tsx  level1.tmx  level2.tmx  level3.tmx  level4.tmx  level5.tmx  level6.tmx  level7.tmx  level8.tmx
(+15 files in other folders)
