[tool.poetry]
name = "gmtk2021"
version = "0.1.0"
description = "Game made for gmtk 20201"
authors = ["Jordan <itsseraphii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
